<resources>
    <string name="app_name">FoodSuggestions</string>
    <string name="suggestion">Get Started</string>
    <string name="welcome">Welcome</string>
    <string name="join">Join the world of cooking!</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="feedback">Feedback</string>
    <string name="details">Recipe</string>
    <string name="serving">Number of servings: </string>
    <string name="searchActivity">SEARCH ACTIVITY</string>
    <string name="homeActivity">HOME ACTIVITY</string>
    <string name="accountActivity">PERSONAL CONT ACTIVITY</string>

    <!--    Login and Register  -->
    <string name="loginHere">Login Here</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="messageAccount">Don\'t have an account?</string>
    <string name="registerNow">Register now</string>
    <string name="mailErrorMassage">Please enter a valid email</string>
    <string name="passwordErrorMassage">Please enter a valid password</string>
    <string name="fullNameErrorMessage">Full name is required!</string>
    <string name="confirmPasswordErrorMessage">Passwords are not matching</string>
    <string name="registerMessage">Failed to register!</string>
    <string name="loginMessage">Filed to login! Please check your credentials or register.</string>

    <string name="registerHere">Register Here</string>
    <string name="fullName">Full Name</string>
    <string name="confirm">Confirm Password</string>
    <string name="register">Register</string>
    <string name="messageLogin">Already have an account?</string>
    <string name="loginNow">Login now</string>
    <string name="logout">LOG OUT</string>

    <!--    Navigation Bar -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="list">Recipes</string>
    <string name="Account">Account</string>

    <!--    Home Activity -->
    <string name="CategoryOne">-- Diets Type --</string>
    <string name="dairy">Dairy Free</string>
    <string name="gluten">Gluten Free</string>
    <string name="CategoryTwo">-- Dish Type --</string>
    <string name="lunch">Lunch</string>
    <string name="dish">Main Dish</string>
    <string name="side">Side Dish</string>
    <string name="dinner">Dinner</string>


    <!--    Search Activity-->
    <string name="searchHint">Search a recipe</string>
    <string name="searchHintIng">Search a ingredient</string>
    <string name="searchIngredient">Search using ingredients</string>
    <string name="buttonSearch">Check</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>