<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/nav_home"
        android:title = "@string/home"
        android:icon="@drawable/ic_home"/>

    <item android:id="@+id/nav_search"
        android:title = "@string/search"
        android:icon="@drawable/ic_search"/>

    <item android:id="@+id/nav_recipes"
        android:title = "@string/list"
        android:icon="@drawable/ic_recipes"/>

    <item android:id="@+id/nav_account"
        android:title = "@string/Account"
        android:icon="@drawable/ic_account"/>

</menu>