<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.RecipesActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/idListRecipes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="1dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp"
        android:elevation="2dp"
        android:background="@drawable/round_corner"
        app:menu="@menu/item_menu"
        app:itemRippleColor="@android:color/transparent"
        app:itemIconSize="30dp"
        app:labelVisibilityMode="unlabeled"
        app:itemIconTint="@drawable/item_selector"/>

</RelativeLayout>